<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework Manager</string>
    <string name="action_settings">Settings</string>
    <string name="charging">Cargando</string>
    <string name="inicio">Homework Manager</string>
    <string name="mis_trabajos">Mis Trabajos</string>
    <string name="mis_tareas">Mis Tareas</string>
    <string name="reporte">Reporte de Trabajos</string>
    <string name="acerca_de">Acerca de</string>
    <string name="salir">Salir</string>
    <string name="nuevo">Nuevo</string>
    <string name="buscar">Buscar</string>
    <string name="resumen">Resumen Trabajos</string>
    <string name="atras">Atrás</string>
    <string name="descripcion">Icono Trabajos</string>
    <string name="nuevo_tra">Nuevo Trabajo</string>
    <string name="modificar_tra">Modificar Trabajo</string>
    <string name="codigo">Código de Clase</string>
    <string name="clase">Nombre de Clase</string>
    <string name="profesor">Profesor</string>
    <string name="descripcion_tra">Descripción</string>
    <string name="fecha">Fecha de Entrega</string>
    <string name="sel_fecha">Seleccionar Fecha</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="prioridad">Prioridad</string>
    <string name="hint">Buscar</string>
    <string name="buscar_por">Buscar Por</string>
    <string name="email">Email Alumno</string>
    <string name="alumnos">Numero de Alumnos</string>
    <string name="grupal">Grupal</string>
    <string name="etiqSensorDeMovimiento">Sensor</string>
    <string name="hello">Hola</string>
    <string name="etiqSensorDeOrientacion">Orientacion</string>
    <string name="javier">Javier Midence</string>
    <string name="javier_cuenta">11011410</string>
    <string name="ricardo">Ricardo Ortega</string>
    <string name="ricardo_cuenta">10941162</string>
    <string name="so">Sistemas Operativos 1</string>
    <string name="terminar">Terminar</string>
    <string name="otro">Otro</string>
    <string name="alumno">Nombre Alumno</string>
    <string name="tarea">Nueva Tarea</string>

</resources>
