<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TrabajosActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/mis_trabajos"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.12"
        android:src="@android:drawable/ic_input_get" 
        android:contentDescription="@string/descripcion"/>

    <Button
        android:id="@+id/nuevo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscar"
        android:textSize="25sp" />

    <Button
        android:id="@+id/resumen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resumen"
        android:textSize="25sp" />

    <Button
        android:id="@+id/atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atras"
        android:textSize="25sp" />

</TableLayout>