<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/nuevo_tra"
        android:textSize="25sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="15dp"
        android:hint="@string/codigo"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/clase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/codigo"
        android:layout_alignRight="@+id/codigo"
        android:layout_below="@+id/codigo"
        android:hint="@string/clase"
        android:ems="10" />

    <EditText
        android:id="@+id/profesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/clase"
        android:layout_alignRight="@+id/clase"
        android:layout_below="@+id/clase"
        android:ems="10"
        android:hint="@string/profesor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/descripcion_tra"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/profesor"
        android:layout_alignRight="@+id/profesor"
        android:layout_below="@+id/profesor"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion_tra"
        android:singleLine="false" />

    <EditText
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descripcion_tra"
        android:layout_alignRight="@+id/descripcion_tra"
        android:layout_below="@+id/descripcion_tra"
        android:ems="10"
        android:hint="@string/fecha"
        android:inputType="date" />

    <RatingBar
        android:id="@+id/prioridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fecha"
        android:layout_toRightOf="@+id/textView2"
        android:numStars="5" />
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/prioridad"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/prioridad"
        android:gravity="center"
        android:text="@string/prioridad" />

    <Button
        android:id="@+id/cancelar"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aceptar"
        android:layout_alignBottom="@+id/aceptar"
        android:layout_alignRight="@+id/fecha"
        android:text="@string/cancelar" />

    <Button
        android:id="@+id/aceptar"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/prioridad"
        android:layout_marginTop="10sp"
        android:text="@string/aceptar" />

</RelativeLayout>
