<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/modificar_tra"
        android:textSize="25sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/mod_codigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="5dp"
        android:hint="@string/codigo"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/mod_clase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mod_codigo"
        android:layout_alignRight="@+id/mod_codigo"
        android:layout_below="@+id/mod_codigo"
        android:hint="@string/clase"
        android:ems="10" />

    <EditText
        android:id="@+id/mod_profesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mod_clase"
        android:layout_alignRight="@+id/mod_clase"
        android:layout_below="@+id/mod_clase"
        android:ems="10"
        android:hint="@string/profesor"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mod_descripcion_tra"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:layout_alignLeft="@+id/mod_profesor"
        android:layout_alignRight="@+id/mod_profesor"
        android:layout_below="@+id/mod_profesor"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/descripcion_tra"
        android:singleLine="false" />

    <TextView
        android:id="@+id/mod_dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:gravity="center_vertical"
        android:layout_alignLeft="@+id/mod_descripcion_tra"
        android:layout_below="@+id/mod_descripcion_tra"
        android:layout_toLeftOf="@+id/mod_pickDate"
        android:ems="10"
        android:hint="@string/fecha" />

    <Button
        android:id="@+id/aceptarMod"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mod_prioridad"
        android:layout_marginTop="5sp"
        android:text="@string/aceptar" />

    <Button
        android:id="@+id/mod_pickDate"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/mod_descripcion_tra"
        android:layout_alignTop="@+id/mod_dateDisplay"
        android:text="@string/sel_fecha" />

    <RatingBar
        android:id="@+id/mod_prioridad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mod_pickDate"
        android:layout_centerHorizontal="true"
        android:numStars="5" />

    <Button
        android:id="@+id/cancelarMod"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aceptarMod"
        android:layout_alignBottom="@+id/aceptarMod"
        android:layout_alignParentRight="true"
        android:text="@string/cancelar" />

</RelativeLayout>
