<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevoActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/tarea"
        android:textSize="25sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/alumno_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="20dp"
        android:hint="@string/alumno"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/descripcion_tra_tarea"
        android:layout_width="wrap_content"
        android:layout_height="80sp"
        android:layout_alignLeft="@+id/email_tarea"
        android:layout_alignRight="@+id/email_tarea"
        android:layout_below="@+id/email_tarea"
        android:ems="10"
        android:layout_marginTop="20sp"
        android:hint="@string/descripcion_tra"
        android:inputType="textMultiLine"
        android:singleLine="false" />

    <TextView
        android:id="@+id/dateDisplay_tarea"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:gravity="center_vertical"
        android:layout_alignLeft="@+id/descripcion_tra_tarea"
        android:layout_below="@+id/descripcion_tra_tarea"
        android:layout_toLeftOf="@+id/pickDate_tarea"
        android:ems="10"
        android:layout_marginTop="20sp"
        android:hint="@string/fecha" />

    <Button
        android:id="@+id/pickDate_tarea"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/descripcion_tra_tarea"
        android:layout_alignTop="@+id/dateDisplay_tarea"
        android:text="@string/sel_fecha" />

    <Button
        android:id="@+id/cancelarNuevo_tarea"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/aceptarNuevo_tarea"
        android:layout_alignBottom="@+id/aceptarNuevo_tarea"
        android:layout_alignRight="@+id/pickDate_tarea"
        android:text="@string/otro" />

    <Button
        android:id="@+id/aceptarNuevo_tarea"
        android:layout_width="130sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dateDisplay_tarea"
        android:layout_alignParentBottom="true"
        android:text="@string/terminar" />

    <EditText
        android:id="@+id/email_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/alumno_tarea"
        android:layout_alignRight="@+id/alumno_tarea"
        android:layout_below="@+id/alumno_tarea"
        android:layout_marginTop="20sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

</RelativeLayout>
