<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/acerca_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/so"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/javier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/acerca_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/javier"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/javier_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/javier"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/javier_cuenta"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    
    <TextView
        android:id="@+id/ricardo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/javier_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/ricardo"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ricardo_cuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ricardo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/ricardo_cuenta"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/aceptar_acerca"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ricardo_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/aceptar" />

</RelativeLayout>
